--- a/.github/workflows/continus-workflow.yml
+++ b/.github/workflows/continus-workflow.yml
@@ -21,7 +21,7 @@ jobs:
         npm run test --if-present
        
     - name: 'Run Azure webapp deploy action using publish profile credentials'
-          uses: azure/webapps-deploy@v1
-          with: 
-            app-name: node-rn
-            publish-profile: ${{ secrets.secret1 }}
+      uses: azure/webapps-deploy@v1
+      with: 
+      app-name: node-rn
+      publish-profile: ${{ secrets.azureWebAppPublishProfile }}
