--- a/.github/workflows/continus-workflow.yml
+++ b/.github/workflows/continus-workflow.yml
@@ -24,4 +24,4 @@ jobs:
       uses: azure/webapps-deploy@v1
       with: 
         app-name: node-rn
-        publish-profile: ${{ secrets.azureWebAppPublishProfile }}
+        publish-profile: ${{ secrets.secret1 }}
